pkg/lang/syntax/testdata/ub/lower/valid/source-stack.ub
stack: {
  factory: {
    inputs: {
      message: 'hello'
    }
  }

  state: local {
    path: '.unobin/state'
  }

  encryption: noop {}
}
