pkg/lang/syntax/testdata/ub/lower/invalid/preclassified-stack.ub
state: { @backend: local }
encryption: { @key-source: noop }
